kube/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boycott-ietf127-django
  namespace: q-personal
  labels:
    app: boycott-ietf127
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boycott-ietf127
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: boycott-ietf127
        part: django
    spec:
      containers:
        - name: gunicorn
          image: theenbyperor/boycott-ietf127:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "4", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--log-level=debug", "--timeout=90", "boycott_ietf_127.wsgi:application"]
          ports:
            - containerPort: 8000
          envFrom: *envFrom
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: boycott-ietf127-django
  namespace: q-personal
spec:
  podSelector:
    matchLabels:
      app: boycott-ietf127
      part: django
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              role: metrics
      ports:
        - protocol: TCP
          port: 8000
